created tags / groups in swagger
